--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ Imports: methods, Rsamtools, parallel, tidyr, rtracklayer (>= 1.54.0),
    plyranges (>= 1.14.0), cowplot (>= 1.1.1), VennDiagram, ggplotify, GenomeInfoDb, 
    IRanges, ComplexHeatmap, RCAS (>= 1.20.0), scales (>= 1.2.0), GenomicAlignments 
    (>= 1.30.0), edgeR, circlize, viridis, ggsignif (>= 0.6.3), ggsci (>= 2.9), 
-   genomation (>= 1.26.0), ggpubr, grDevices, graphics, stats, utils, GenomicFeatures, 
+   ggpubr, grDevices, graphics, stats, utils, GenomicFeatures, genomation (>= 1.26.0),
    txdbmaker, ggplot2 (>= 3.3.5), BiocGenerics, dplyr, grid
 Suggests: knitr, rmarkdown, R.utils, Biobase, BiocStyle, testthat, AnnotationDbi
 biocViews: AlternativeSplicing, ChIPSeq, Coverage, GeneExpression, RNASeq, Sequencing, 
